err/ape.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ape'...
Compiling './lib/python3.5/site-packages/ape/__init__.py'...
***   File "./lib/python3.5/site-packages/ape/__init__.py", line 109
    print inspect.getdoc(self._tasks)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ape/container_mode'...
Compiling './lib/python3.5/site-packages/ape/container_mode/tasks.py'...
***   File "./lib/python3.5/site-packages/ape/container_mode/tasks.py", line 52
    print 'root directory         :', tasks.conf.APE_ROOT
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ape/installtools'...
Compiling './lib/python3.5/site-packages/ape/installtools/__init__.py'...
***   File "./lib/python3.5/site-packages/ape/installtools/__init__.py", line 29
    print '... creating project-level virtualenv'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ape/installtools/pypath.py'...
***   File "./lib/python3.5/site-packages/ape/installtools/pypath.py", line 18
    print generate_pypath_for_initenv(),
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ape/main.py'...
***   File "./lib/python3.5/site-packages/ape/main.py", line 76
    print 'Task "%s" not found! Use "ape help" to get usage information.' % taskname
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ape/resources'...
Listing './lib/python3.5/site-packages/ape/test'...
Listing './lib/python3.5/site-packages/ape-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/featuremonkey'...
Listing './lib/python3.5/site-packages/featuremonkey/test'...
Listing './lib/python3.5/site-packages/featuremonkey/test/mock'...
Listing './lib/python3.5/site-packages/featuremonkey/test/mock/testpackage1'...
Listing './lib/python3.5/site-packages/featuremonkey-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
